crates/parser/tests/cases/snapshots/cases__errors__contract_missing_version_requirement.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_missing_version_requirement),\n    module::parse_module, r#\"\npragma\ncontract C {}\n\"#)"

---
error: failed to parse pragma statement: missing version requirement
  ┌─ contract_missing_version_requirement:2:1
  │
2 │ pragma
  │ ^^^^^^


